--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=fals
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
-
-
+#
+# Spring Data REST properties
+#
+spring.data.rest.base-path=/magic-api
 
 
 
