--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.password=springstudent
 # Spring Data REST properties
 #
 spring.data.rest.base-path=/magic-api
-
+spring.data.rest.default-page-size=20
 
 
